Fixed height and width on home page header, to prevent layout jumping

--- a/src/components/pages/homePage/homePage.module.scss
+++ b/src/components/pages/homePage/homePage.module.scss
@@ -17,6 +17,9 @@
     gap: 10px;
     align-items: center;
     justify-content: center;
+    min-width: 100vw;
+    min-width: 100dvw;
+    min-height: 100%;
 
     /* CSS gradients over the bg image */
     // background: -moz-linear-gradient(
